Proyecto semiacado, problemas con la api dle servidor externo

--- a/src/app/credentials/credentials/credentials.component.html
+++ b/src/app/credentials/credentials/credentials.component.html
@@ -1,62 +1,27 @@
 <div class="my-5">
-  <div *ngIf="isLogin; else registro">
-    <div class="card">
-      <div class="card-header">
-        <h2 class="text-center">Login</h2>
-      </div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              value="{{ data.datos.email }}"
-            />
-          </div>
-          <div class="form-group">
-            <label for="pass">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="pass"
-              value="{{ data.datos.pass }}"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-      </div>
+  <div class="card">
+    <div class="card-header">
+      <h2 class="text-center">{{ data.title | titlecase }}</h2>
+    </div>
+    <div class="card-body">
+      <div class="alert alert-danger" *ngIf="errorMessage">{{ errorMessage }}</div>
+      <form>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" [(ngModel)]="data.datos.email" name="email" />
+        </div>
+        <div class="form-group">
+          <label for="pass">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="pass"
+            [(ngModel)]="data.datos.pass" name="pass"
+          />
+        </div>
+        <button (click)="submit()" class="btn btn-primary">{{ data.title | titlecase }}</button>
+      </form>
+      <a [routerLink]="['/credentials/' + data.alternate]">{{ data.alternate | titlecase }}</a>
     </div>
   </div>
-  <ng-template #registro>
-    <div class="card">
-      <div class="card-header">
-          <h2 class="text-center">Registro</h2>
-      </div>
-      <div class="card-body">
-        <form>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              placeholder="Email"
-            />
-          </div>
-          <div class="form-group">
-            <label for="pass">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="pass"
-              placeholder="Password"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-        </form>
-      </div>
-    </div>
-  </ng-template>
 </div>
